<resources>
    <string name="app_name">BuzzaPizza</string>
    <string name="greeting">Good %1$s!</string>
    <string name="btn_customize_pizza">Customize Pizza</string>
    <string name="text_history_orders">History Orders</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="hint_required_edit_text_name">Name <font color='#FF0000'>*</font></string>
    <string name="hint_required_edit_text_address">Address <font color='#FF0000'>*</font></string>
    <string name="hint_required_edit_text_city">City <font color='#FF0000'>*</font></string>
    <string name="hint_required_edit_text_zip_code">Zip Code <font color='#FF0000'>*</font></string>
    <string name="field_required">Field Required</string>
</resources>