<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mercury"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout_main"
    tools:context=".orderfragment.OrderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_circle_cancel"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Let’s order!"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Order Information"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_required_edit_text_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_required_edit_text_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_required_edit_text_city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_required_edit_text_zip_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_back"
            style="@style/Theme.BuzzaPizza.ButtonNavigation"
            android:layout_alignParentStart="true"
            android:text="Back" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Theme.BuzzaPizza.ButtonNavigation"
            android:layout_alignParentEnd="true"
            android:text="Order"
            tools:enabled="false" />

    </RelativeLayout>

</LinearLayout>