<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mercury"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_pizza" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/brand_buzza_pizza" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/greeting" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_customize_pizza"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:paddingEnd="15dp"
            android:paddingBottom="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pizza" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/btn_customize_pizza"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_arrow_forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_flag_star" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_history_orders"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_view_history_orders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="9dp"
            tools:listitem="@layout/activity_main_history_order_list_item"
            tools:listitemCount="3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>